--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "format": "prettier --write .",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "echo \"Add your test command here\" && exit 0"
@@ -20,15 +21,16 @@
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.21.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "7.15.0",
+    "@typescript-eslint/parser": "7.15.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "@eslint/js": "9.21.0",
     "eslint": "9.21.0",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.19",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
