--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-templates",
-  "private": true,
+   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "description": "Put your project description here",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,13 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.12.1",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "devDependencies": {
     "@eslint/js": "9.21.0",
@@ -31,6 +29,10 @@
     "eslint-plugin-react-refresh": "0.4.19",
     "prettier": "^3.6.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "@rollup/plugin-replace": "^6.0.2",
+    "globals": "16.3.0",
+    "typescript-eslint": "8.39.1",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
